--- a/近年来的技术圈脉络，最爱日本人的技术研究与解读.md
+++ b/近年来的技术圈脉络，最爱日本人的技术研究与解读.md
@@ -1,3 +1,5 @@
+## 近年来的技术圈脉络，最爱日本人的技术研究与解读
+
 其实我入行技术，也挺多年了，从 2014 年 6 月高中毕业开始，有 7 年多了。可尽管入行这么多年，我却没有深入多少，实在是太分心了，也缺乏深入的能力。而今重塑自我归来，或许会好一些吧。 <br />​
 
 2014 年，那是一个博客盛行的年代，前端爆发性发展。当然社会也是，科技产品的涌现，科技力量对各行各业的冲击，还有小型的文艺复兴···不过到了现在，很多博客基本都死了，剩下的博客，大部分也是自己捯饬技术用的，里面的内容远远落后于时代。<br />​<br />
