--- a/近年来的技术圈脉络，最爱日本人的技术研究与解读.md
+++ b/近年来的技术圈脉络，最爱日本人的技术研究与解读.md
@@ -28,3 +28,5 @@
 综合来看，中国的技术人，都很受限，感觉都很难走向世界级。一些身在外国的技术人还更好，像开源 [Vue.js](https://cn.vuejs.org/) 框架的[尤雨溪](https://twitter.com/youyuxi)，他们是联合世界各国的开发者，英国、美国、日本···各自在家办公，是很了不起的。而全球的技术人，虽然技术源自他们，可我现在还没太多感觉，可能是很多经典的技术书，我都没来得及看，我的圈子眼界也太小，很多东西还没接触到。待我进行更多更深的研究，多逛逛 [Github](https://github.com/)。<br />​
 
 当然，我最欣赏的，还是日本的技术人，他们写的[技术书](https://www.yuque.com/lianmt/japan/ahcsgg)非常好，而且他们非常专注。可似乎他们很少写博客，或是我还没找到吧。不知道他们是怎样的学习模式，这点我还需要继续了解。但是他们的创造力，我觉得就连阮一峰、云风，也无法媲美，因为思维就很不同。人家是从底层开始研究、解读，有自己的语言方式，而中国人，大多是写整合教程文档，或者写写日记，不是一个维度的思考。也许，这才是我应该追寻的方向，而不只是在这里写写博客。
+
+[原文链接](https://www.yuque.com/lianmt/it/af4vwk)
