--- a/《编程大师访谈录 11位》以我的理解，通俗重述.md
+++ b/《编程大师访谈录 11位》以我的理解，通俗重述.md
@@ -1,226 +1,165 @@
+## 《编程大师访谈录 11位》以我的理解，通俗重述
+
 > Adobe 联合创始人 约翰·沃诺克：“如果你真想取得成功，先适应社会其他领域（通识教育），然后再进入计算机行业，这才是更为可取的成功之道。”
 
-​
-
+​<br />
+<a name="xbaZa"></a>
 ### 1、查尔斯·西蒙尼：“Word 之父” 
 ​
 
-1、
-​
+1、<br />​
 
-（管理的最佳方法，是言传身教，比如通过复查代码。）
-​
+（管理的最佳方法，是言传身教，比如通过复查代码。）<br />​
 
-2、
-​
+2、<br />​
 
-**“我认为“简单崇拜”，即****以简单本身作为追求目标****的观念，值得高度怀疑。多年来，这个观念一直诱使我们关注那些****回报最快的问题****。”**
-​
+**“我认为“简单崇拜”，即****以简单本身作为追求目标****的观念，值得高度怀疑。多年来，这个观念一直诱使我们关注那些****回报最快的问题****。”**<br />​
 
-（这会导致在复杂的领域，毫无进展。）
-​
-
+（这会导致在复杂的领域，毫无进展。）<br />​<br />
+<a name="rrAVS"></a>
 ### 2、巴特勒·兰普森：“电脑科学家，提出个人电脑概念”
 ​
 
-1、
-​
+1、<br />​
 
-“要想有所成就，必须能够清晰地思考。”
-​
+“要想有所成就，必须能够清晰地思考。”<br />​
 
 （而呆在一个领域，想成就会很困难，**你需要找到施展才华的方法**。可以多训练逻辑推理，学习历史、文艺、数学、物理等实验性科学。）
 
-**文学，在于关联各个事物，带来变化与想象。
-科学，在于逻辑推理，抽象与证明。**
-​
+**文学，在于关联各个事物，带来变化与想象。<br />科学，在于逻辑推理，抽象与证明。**<br />​
 
-2、
-​
+2、<br />​
 
-**（想写出优异代码，也就是****设计程序****，最重要的是****准确定义接口****，包括系统与外界和系统自身各部件的接口，其关注点，就是****待解决的问题****。这样你也能更好地理解****程序真正做了些什么****，也能鉴别出****程序的关键部分****。）**
-​
+**（想写出优异代码，也就是****设计程序****，最重要的是****准确定义接口****，包括系统与外界和系统自身各部件的接口，其关注点，就是****待解决的问题****。这样你也能更好地理解****程序真正做了些什么****，也能鉴别出****程序的关键部分****。）**<br />​
 
-3、
-​
+3、<br />​
 
-（如何准备未来？思考、阅读、写作，这些东西会有持久价值。）
-​
-
+（如何准备未来？思考、阅读、写作，这些东西会有持久价值。）<br />​<br />
+<a name="hFDEg"></a>
 ### 3、约翰·沃诺克：“发明 PDF 格式，Adobe 联合创始人” 
 ​
 
-1、
-​
+1、<br />​
 
-（选择多，意味着犯错的可能性也更大。）
-​
+（选择多，意味着犯错的可能性也更大。）<br />​
 
-2、
-​
+2、<br />​
 
-（不要固守代码，必要时要能够抛弃掉。）
-​
+（不要固守代码，必要时要能够抛弃掉。）<br />​
 
-3、
-​
+3、<br />​
 
-（你知道的东西，别人迟早也会知道，总会有更聪明的家伙出现。所以，**不用非得用自己写的代码，也不必非得用自己的方式来做事，有好的方案就迅速采用。**）
-​
+（你知道的东西，别人迟早也会知道，总会有更聪明的家伙出现。所以，**不用非得用自己写的代码，也不必非得用自己的方式来做事，有好的方案就迅速采用。**）<br />​
 
-4、
-​
+4、<br />​
 
-**“如果你真想取得成功，先适应社会其他领域（通识教育），然后再进入计算机行业，这才是更为可取的成功之道。”**
-​
-
+**“如果你真想取得成功，先适应社会其他领域（通识教育），然后再进入计算机行业，这才是更为可取的成功之道。”**<br />​<br />
+<a name="niIGW"></a>
 ### 4、加里·基尔代尔：“DOS 之父”，初创操作系统、图形用户界面、驱动程序等
 ​
 
-1、
-​
+1、<br />​
 
-**（编程的基础，是简化问题，比如数据结构。这也是解决问题的办法，将复杂问题拆解成小问题。）**
-​
-
+**（编程的基础，是简化问题，比如数据结构。这也是解决问题的办法，将复杂问题拆解成小问题。）**<br />​<br />
+<a name="wZxYj"></a>
 ### 5、比尔·盖茨：“微软联合创始人，蝉联 13 年世界首富，最大的慈善家···”
 ​
 
-1、
-​
+1、<br />​
 
-（编程最难的，是选择算法，并简化算法。这必须**在心中模拟程序**是如何工作的，比如**了解程序各部分**是如何一起工作的。）
-​
+（编程最难的，是选择算法，并简化算法。这必须**在心中模拟程序**是如何工作的，比如**了解程序各部分**是如何一起工作的。）<br />​
 
-2、
-​
+2、<br />​
 
-（**我们不赞成独行侠的做法**，个人再优秀，也不允许不写注释，不允许不与他人沟通，不允许把个人的想法强加给别人。我们希望程序员能够互相尊重。）
-​
+（**我们不赞成独行侠的做法**，个人再优秀，也不允许不写注释，不允许不与他人沟通，不允许把个人的想法强加给别人。我们希望程序员能够互相尊重。）<br />​
 
-3、
-​
+3、<br />​
 
-**“我认为在过了最初的三四年后，就会非常明显地显现出你是否是一个优秀的程序员···在三四年后，就能很清楚地看出你会成为什么样的程序员了。在微软没有哪个程序员是在平庸了几年之后突然间一鸣惊人的。我和一个人谈谈他的程序，马上就能知道他是否是个好程序员。如果他真的很棒，每个细节他都会脱口而出。”**
-​
+**“我认为在过了最初的三四年后，就会非常明显地显现出你是否是一个优秀的程序员···在三四年后，就能很清楚地看出你会成为什么样的程序员了。在微软没有哪个程序员是在平庸了几年之后突然间一鸣惊人的。我和一个人谈谈他的程序，马上就能知道他是否是个好程序员。如果他真的很棒，每个细节他都会脱口而出。”**<br />​
 
-4、
-​
+4、<br />​
 
-“编程需要非常大量的精力，也需要很多的训练。”
-​
+“编程需要非常大量的精力，也需要很多的训练。”<br />​
 
-5、
-​
+5、<br />​
 
-**“成为程序员的最佳途径，是编写程序，并研究其他人编写的优秀程序。”**
-​
-
+**“成为程序员的最佳途径，是编写程序，并研究其他人编写的优秀程序。”**<br />​<br />
+<a name="TWQHj"></a>
 ### 6、约翰·佩奇：“PFS 产品之父”
 ​
 
-1、
-​
+1、<br />​
 
-“领导者，不能长时间地工作，领导是一种人际交往活动。领导，是非常消耗精力的，付出很多却没有回报。当身边人在成长、新的项目开发成功并走向市场、公司持续增长时，你会看到直接的效果。没有编程带来的直接喜悦。”
-​
-
+“领导者，不能长时间地工作，领导是一种人际交往活动。领导，是非常消耗精力的，付出很多却没有回报。当身边人在成长、新的项目开发成功并走向市场、公司持续增长时，你会看到直接的效果。没有编程带来的直接喜悦。”<br />​<br />
+<a name="siZ5n"></a>
 ### 7、乔纳森·萨奇：“Lotus 1-2-3 电子表格 之父”
 ​
 
-1、
-​
+1、<br />​
 
-“在大公司担任重要职位，有很大压力，你不能松懈。在那种压力下连续工作好几个月，在很多方面来说，都是一种自我毁灭。”
-​
+“在大公司担任重要职位，有很大压力，你不能松懈。在那种压力下连续工作好几个月，在很多方面来说，都是一种自我毁灭。”<br />​
 
-2、
-​
+2、<br />​
 
-**（有些人擅长优化，紧凑地压缩代码。而另一些人，更****注重算法和实现过程****。我觉得过分优化，每次需要修改代码时，都必须重构。退一步，只重构关键点，程序会更容易维护。）**
-​
-
+**（有些人擅长优化，紧凑地压缩代码。而另一些人，更****注重算法和实现过程****。我觉得过分优化，每次需要修改代码时，都必须重构。退一步，只重构关键点，程序会更容易维护。）**<br />​<br />
+<a name="KkDw9"></a>
 ### 8、雷·奥奇：“Symphony 程序之父”
 ​
 
-1、
-​
+1、<br />​
 
-**（经验，能让你清楚自己能做什么。）**
-​
+**（经验，能让你清楚自己能做什么。）**<br />​
 
-2、
-​
+2、<br />​
 
-“非程序员出身的管理人员，负责的复杂编程项目往往注定要出差错，因为他们既不理解项目组件之错综复杂，也不了解程序员的个性脾气。软件项目经理必须熟悉手下的员工。我会尽力了解与自己共事的每个人的家庭状况、生活方式以及工作习惯。”
-​
+“非程序员出身的管理人员，负责的复杂编程项目往往注定要出差错，因为他们既不理解项目组件之错综复杂，也不了解程序员的个性脾气。软件项目经理必须熟悉手下的员工。我会尽力了解与自己共事的每个人的家庭状况、生活方式以及工作习惯。”<br />​
 
-3、
-​
+3、<br />​
 
-“我知道，**要是每天朝九晚五地工作，项目肯定完不成。**另外，我也非常清楚，不能逼着大家在整个项目期间没日没夜地工作。但我相信，遇到紧要关头时，如有必要，我可以依靠他们夜以继日地工作。我还得知道什么时候该让大家放松一下。”
-​
+“我知道，**要是每天朝九晚五地工作，项目肯定完不成。**另外，我也非常清楚，不能逼着大家在整个项目期间没日没夜地工作。但我相信，遇到紧要关头时，如有必要，我可以依靠他们夜以继日地工作。我还得知道什么时候该让大家放松一下。”<br />​
 
-4、
-​
+4、<br />​
 
-“管理人员试图颁发条令或过度管制时，往往很容易滋生问题。**程序员很有创造力，善于自我指导和自我激励。你必须预先认识到这一点，不到万不得已，千万不要介入。**如果你特意让团队日子好过，他们也能意识到的话，在关键时候他们自然会为你着想。”
-​
+“管理人员试图颁发条令或过度管制时，往往很容易滋生问题。**程序员很有创造力，善于自我指导和自我激励。你必须预先认识到这一点，不到万不得已，千万不要介入。**如果你特意让团队日子好过，他们也能意识到的话，在关键时候他们自然会为你着想。”<br />​
 
-5、
-​
+5、<br />​
 
-“团队规模应该尽量小，并且尽量不要分等级的原因。”
-​
+“团队规模应该尽量小，并且尽量不要分等级的原因。”<br />​
 
-6、
-​
+6、<br />​
 
-**（担心、不安全感，可能会对积极性造成负面影响。）**
-​
-
+**（担心、不安全感，可能会对积极性造成负面影响。）**<br />​<br />
+<a name="j7Spe"></a>
 ### 9、彼得·罗伊森：“T/Maker  电子表格之父”
 ​
 
-1、
-​
+1、<br />​
 
-**“金钱能买到影响力。这是这片土地上的规则。但我不会把这叫做妥协。事实上，有些公司把这称作成熟，认为这是积极调整。”**
-​
+**“金钱能买到影响力。这是这片土地上的规则。但我不会把这叫做妥协。事实上，有些公司把这称作成熟，认为这是积极调整。”**<br />​
 
-2、
-​
+2、<br />​
 
-“在我工作过的机构里，很多时候，我们甚至根本没有去解决什么问题，因为我们首先要做可行性分析，其费时往往超过真正完成工作所需的时间。”
-​
+“在我工作过的机构里，很多时候，我们甚至根本没有去解决什么问题，因为我们首先要做可行性分析，其费时往往超过真正完成工作所需的时间。”<br />​
 
-3、
-​
+3、<br />​
 
-“当我为其他人工作时，我认为再找工作的话，一定要比前一份工作至少高出 5%的收入，而且我很不愿意冒险。我总是想着薪水和下一个发薪日，因为我可能想要买个新电视或立体声音响什么的。”（但这常常没有创造价值，我开始感到自己很没用。）
-​
+“当我为其他人工作时，我认为再找工作的话，一定要比前一份工作至少高出 5%的收入，而且我很不愿意冒险。我总是想着薪水和下一个发薪日，因为我可能想要买个新电视或立体声音响什么的。”（但这常常没有创造价值，我开始感到自己很没用。）<br />​
 
-（当我为自己工作时，我从作品本身得到满足和快乐，也更加自由。低收入，我也乐意，因为奢侈品并不是生活的重要组成部分，而做自己喜欢的工作是。）
-​
-
+（当我为自己工作时，我从作品本身得到满足和快乐，也更加自由。低收入，我也乐意，因为奢侈品并不是生活的重要组成部分，而做自己喜欢的工作是。）<br />​<br />
+<a name="i7Ucu"></a>
 ### 10、鲍勃·卡尔：“Framework 框架开发者”
 ​
 
-1、
-**​**
+1、<br />**​**
 
-**（尽可能推迟编码，因为一旦编码后，就很难改变方向了。会成为阻碍。但程序设计却一直在我的脑海中，从没有停止过。）**
-​
-
+**（尽可能推迟编码，因为一旦编码后，就很难改变方向了。会成为阻碍。但程序设计却一直在我的脑海中，从没有停止过。）**<br />​<br />
+<a name="NVfSV"></a>
 ### 11、杰夫·拉斯金：“Macintosh 项目发起人”
 ​
 
-1、
-​
+1、<br />​
 
-**“你赚的钱越多，愿意聆听你的人就越多。”**
-**（不管你做得多好，如果不赚钱，就没人会理睬你。可如果你赚钱了，无论你说的是好是坏，人们都会洗耳恭听。）**
-​
+**“你赚的钱越多，愿意聆听你的人就越多。”**<br />**（不管你做得多好，如果不赚钱，就没人会理睬你。可如果你赚钱了，无论你说的是好是坏，人们都会洗耳恭听。）**<br />​
 
 ​
 
